fixed No spacing between slideshow and front page boxes

--- a/amani/themes/amani_zen/sass/components/_front-page-blocks.scss
+++ b/amani/themes/amani_zen/sass/components/_front-page-blocks.scss
@@ -7,6 +7,7 @@
 .front-page-blocks {
   margin-bottom: 50px;
   text-align: center;
+  padding-top: 20px;
 
   .views-row {
     display: inline-block;
@@ -466,7 +467,7 @@
   position: fixed;
   top: 670px;
   right: 0;
-  z-index: 999;
+  z-index: 998;
   
   @media (max-width: 1300px) {
     top: 620px;
